@@ -7,6 +7,7 @@
  - Add tests for Input.
  - Add tests for Select.
  - Add tests for Select constructor errors.
+ - Fix boolean value in Option for disabled and selected params.
 
 0.09 2024-01-06T19:35:12+01:00
  - Add check for CSS class.
